k8s/azure-raw/01-namespace.yml
# --------- Namespace: streamforge ---------
apiVersion: v1
kind: Namespace
metadata:
  name: streamforge
  labels:
    app.kubernetes.io/part-of: streamforge-application
    app.kubernetes.io/name: streamforge
