k8s/azure-raw/05-sf-rabbitmq-deploy.yml
# --------- Deployment : RabbitMQ ---------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sf-rabbitmq
  namespace: streamforge
  labels:
    app.kubernetes.io/name: rabbitmq
    app.kubernetes.io/part-of: streamforge-application
    app.kubernetes.io/component: queue
    azure.workload.identity/use: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: rabbitmq
      app.kubernetes.io/part-of: streamforge-application
      app.kubernetes.io/component: queue
  template:
    metadata:
      labels:
        app.kubernetes.io/name: rabbitmq
        app.kubernetes.io/part-of: streamforge-application
        app.kubernetes.io/component: queue
    spec:
      serviceAccountName: "sf-workload-sa"
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app.kubernetes.io/name
                      operator: In
                      values:
                        - rabbitmq
                topologyKey: "kubernetes.io/hostname"
      containers:
        - name: sf-rabbitmq
          image: rabbitmq:4.2.4-alpine
          resources:
            limits:
              memory: "1Gi"
              cpu: "1"
            requests:
              memory: "512Mi"
              cpu: "500m"
          ports:
            - containerPort: 5672
              protocol: TCP
              name: amqp
          livenessProbe:
            exec:
              command:
                - rabbitmq-diagnostics
                - ping
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
          readinessProbe:
            exec:
              command:
                - rabbitmq-diagnostics
                - ping
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
          volumeMounts:
            - name: sf-rabbitmq-data
              mountPath: /var/lib/rabbitmq
            - name: sf-secrets
              mountPath: "/mnt/secrets-store"
              readOnly: true

      volumes:
        - name: sf-rabbitmq-data
          persistentVolumeClaim:
            claimName: pvc-streamforge-rabbitmq
        - name: sf-secrets
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "azure-kv-sf"
