k8s/azure-raw/06-sf-api-deploy.yml
---
# --------- Deployment : API ---------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sf-api
  namespace: streamforge
  labels:
    app.kubernetes.io/name: api
    app.kubernetes.io/part-of: streamforge-application
    app.kubernetes.io/component: backend
    azure.workload.identity/use: "true"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: api
      app.kubernetes.io/part-of: streamforge-application
      app.kubernetes.io/component: backend
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: api
        app.kubernetes.io/part-of: streamforge-application
        app.kubernetes.io/component: backend
    spec:
      serviceAccountName: "sf-workload-sa"
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app.kubernetes.io/name
                      operator: In
                      values:
                        - api
                topologyKey: "kubernetes.io/hostname"
      containers:
        - name: api
          image: acrstreamforgedevci.azurecr.io/streamforge/api:v1
          resources:
            limits:
              memory: "128Mi"
              cpu: "100m"
            requests:
              memory: "64Mi"
              cpu: "50m"
          ports:
            - containerPort: 8080
              protocol: TCP
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - wget -qO- http://localhost:8080/healthz || exit 1
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - wget -qO- http://localhost:8080/healthz || exit 1
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
          volumeMounts:
            - name: sf-secrets
              mountPath: "/mnt/secrets-store"
              readOnly: true
      volumes:
        - name: sf-secrets
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "azure-kv-sf"
