k8s/azure-raw/08-sf-frontend-deploy.yml
---
# --------- Deployment : Frontend ---------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sf-frontend
  namespace: streamforge
  labels:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/part-of: streamforge-application
    app.kubernetes.io/component: frontend
    azure.workload.identity/use: "true"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: frontend
      app.kubernetes.io/part-of: streamforge-application
      app.kubernetes.io/component: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: frontend
        app.kubernetes.io/part-of: streamforge-application
        app.kubernetes.io/component: frontend
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app.kubernetes.io/name
                      operator: In
                      values:
                        - frontend
                topologyKey: "kubernetes.io/hostname"
      # initContainers:
      #   # InitContainer for Backend APi
      #   - name: wait-for-backend-api
      #     image: busybox:1.36
      #     command:
      #       - sh
      #       - -c
      #       - |
      #         until   wget -qO- http://sf-api-svc:8080/healthz; do
      #           echo "Waiting for Backend API..."
      #           sleep 5
      #         done
      #         echo "Backend API is ready"
      containers:
        - name: frontend
          image: ghcr.io/sudheerkumarp0357/streamforge/frontend:sha-53c4cdc1513980cf0eb2f3e59b18d91cc42b3d0d
          resources:
            limits:
              memory: "128Mi"
              cpu: "100m"
            requests:
              memory: "64Mi"
              cpu: "50m"
          ports:
            - containerPort: 3000
