k8s/azure-raw/06-redis.yml
# --------- Deployment : Redis ---------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: streamforge
  labels:
    app: streamforge
    app.kubernetes.io/name: streamforge
    app.kubernetes.io/component: redis
    app.kubernetes.io/tier: cache
spec:
  replicas: 1
  selector:
    matchLabels:
      app: streamforge
      app.kubernetes.io/name: streamforge
      app.kubernetes.io/component: redis
      app.kubernetes.io/tier: cache
  template:
    metadata:
      labels:
        app: streamforge
        app.kubernetes.io/name: streamforge
        app.kubernetes.io/component: redis
        app.kubernetes.io/tier: cache
    spec:
      containers:
        - name: streamforge-redis
          image: redis:alpine
          command: ["redis-server"]
          args: ["/config/redis.conf"]
          # resources:
          #   limits:
          #     memory: "128Mi"
          #     cpu: "500m"
          #   requests:
          #     memory: "64Mi"
          #     cpu: "250m"
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: redis-data
              mountPath: /data
            - name: redis-conf
              mountPath: /config
          livenessProbe:
            exec:
              command:
                - redis-cli
                - ping
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
          readinessProbe:
            exec:
              command:
                - redis-cli
                - ping
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
      volumes:
        - name: redis-data
          persistentVolumeClaim:
            claimName: pvc-streamforge-redis
        - name: redis-conf
          configMap:
            name: cm-streamforge-redis
            items:
              - key: redis-config
                path: redis.conf

---
# --------- Service : Redis ---------
apiVersion: v1
kind: Service
metadata:
  name: streamforge-redis-svc
  namespace: streamforge
  labels:
    app: streamforge
    app.kubernetes.io/name: streamforge
    app.kubernetes.io/component: redis
    app.kubernetes.io/tier: cache
spec:
  selector:
    app: streamforge
    app.kubernetes.io/name: streamforge
    app.kubernetes.io/component: redis
    app.kubernetes.io/tier: cache
  ports:
    - port: 6379
      targetPort: 6379
  type: ClusterIP

---
