k8s/azure-raw/06-sf-api-svc.yml
# --------- Service : API ---------
apiVersion: v1
kind: Service
metadata:
  name: sf-api-svc
  labels:
    app.kubernetes.io/name: api
    app.kubernetes.io/part-of: streamforge-application
    app.kubernetes.io/component: backend
spec:
  selector:
    app.kubernetes.io/name: api
    app.kubernetes.io/part-of: streamforge-application
    app.kubernetes.io/component: backend
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
