k8s/azure-raw/08-api.yml
---
# --------- Deployment : API ---------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: streamforge
  labels:
    app: streamforge
    app.kubernetes.io/name: streamforge
    app.kubernetes.io/component: api
    app.kubernetes.io/tier: backend
spec:
  selector:
    matchLabels:
      app: streamforge
      app.kubernetes.io/name: streamforge
      app.kubernetes.io/component: api
      app.kubernetes.io/tier: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: streamforge
        app.kubernetes.io/name: streamforge
        app.kubernetes.io/component: api
        app.kubernetes.io/tier: backend
    spec:
      containers:
        - name: streamforge-api
          image: sudheer0357/streamforge-api:latest
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
            requests:
              memory: "64Mi"
              cpu: "250m"
          ports:
            - containerPort: 8080
              protocol: TCP
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - wget -qO- http://localhost:8080/healthz || exit 1
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - wget -qO- http://localhost:8080/healthz || exit 1
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5

---
# --------- Service : API ---------
apiVersion: v1
kind: Service
metadata:
  name: streamforge-api-svc
  namespace: streamforge
spec:
  selector:
    app: streamforge
    app.kubernetes.io/name: streamforge
    app.kubernetes.io/component: api
    app.kubernetes.io/tier: backend
  ports:
    - port: 8080
      targetPort: 8080

---
