k8s/azure-raw/08-sf-frontend-svc.yml
---
# --------- Service : Frontend ---------
apiVersion: v1
kind: Service
metadata:
  name: sf-frontend-svc
  namespace: streamforge
  labels:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/part-of: streamforge-application
    app.kubernetes.io/component: frontend
spec:
  selector:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/part-of: streamforge-application
    app.kubernetes.io/component: frontend
  ports:
    - port: 80
      targetPort: 3000
  type: LoadBalancer
